--- a/app/src/main/res/layout/activity_upcoming_movie.xml
+++ b/app/src/main/res/layout/activity_upcoming_movie.xml
@@ -5,7 +5,7 @@
 	xmlns:app="http://schemas.android.com/apk/res-auto">
 
 	<TextView
-		android:id="@+id/upcoming_movie_title"
+		android:id="@+id/upcoming_movie_title_activity"
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
 		android:text="@string/upcoming_movies"
@@ -17,12 +17,12 @@
 		/>
 
 	<FrameLayout
-		android:id="@+id/top_rated_movies_list"
+		android:id="@+id/upcoming_movies_activity"
 		android:layout_width="0dp"
 		android:layout_height="0dp"
 		app:layout_constraintStart_toStartOf="parent"
 		app:layout_constraintEnd_toEndOf="parent"
-		app:layout_constraintTop_toBottomOf="@id/upcoming_movie_title"
+		app:layout_constraintTop_toBottomOf="@id/upcoming_movie_title_activity"
 		app:layout_constraintBottom_toBottomOf="parent"
 		/>
 
