--- a/app/src/main/res/layout/activity_detail_top_rated_movie.xml
+++ b/app/src/main/res/layout/activity_detail_top_rated_movie.xml
@@ -5,7 +5,9 @@
 	android:id="@+id/top_rated_movie_details"
 	android:layout_width="match_parent"
 	android:layout_height="match_parent"
-	android:layout_margin="14dp">
+	android:background="@drawable/gradient3"
+	android:padding="14dp"
+	>
 
 	<ImageView
 		android:id="@+id/top_rated_movie_poster_detail"
@@ -22,16 +24,17 @@
 		android:id="@+id/top_rated_movie_title_detail"
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
-		android:text="Movie Title"
-		android:textAppearance="@style/TextAppearance.AppCompat.Large"
 		android:layout_marginStart="8dp"
 		android:layout_marginTop="4dp"
 		android:layout_marginBottom="4dp"
-		app:layout_constraintStart_toStartOf="parent"
-		app:layout_constraintTop_toBottomOf="@id/top_rated_movie_poster_detail"
+		android:fontFamily="@font/bebas_regular"
+		android:text="Movie Title"
+		android:textAppearance="@style/TextAppearance.AppCompat.Large"
+		android:textSize="30sp"
 		app:layout_constraintBottom_toTopOf="@id/top_rated_release_date_detail"
-
-		/>
+		app:layout_constraintEnd_toEndOf="parent"
+		app:layout_constraintStart_toStartOf="parent"
+		app:layout_constraintTop_toBottomOf="@id/top_rated_movie_poster_detail" />
 
 	<TextView
 		android:id="@+id/top_rated_release_date_detail"
@@ -51,8 +54,8 @@
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
 		android:layout_marginStart="8dp"
-		android:numStars="5"
-		android:stepSize="0.5"
+		android:numStars="10"
+		android:stepSize="0.1"
 		style="@style/Widget.AppCompat.RatingBar.Indicator"
 		app:layout_constraintStart_toStartOf="parent"
 		app:layout_constraintTop_toBottomOf="@id/top_rated_release_date_detail"
