--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,6 +15,7 @@
 		app:layout_constraintTop_toTopOf="parent"
 		app:layout_constraintHeight_percent="0.5"
 		tools:layout="@layout/activity_top_rated_movie"
+		android:background="@drawable/gradient"
 		>
 
 		<include layout="@layout/activity_top_rated_movie"/>
@@ -29,6 +30,7 @@
 		app:layout_constraintBottom_toBottomOf="parent"
 		app:layout_constraintHeight_percent="0.5"
 		tools:layout="@layout/activity_upcoming_movie"
+		android:background="@drawable/gradient2"
 		>
 
 
