--- a/app/src/main/res/layout/fragment_top_rated_movie.xml
+++ b/app/src/main/res/layout/fragment_top_rated_movie.xml
@@ -23,14 +23,14 @@
 		android:id="@+id/top_rated_movie_title"
 		android:layout_width="150dp"
 		android:layout_height="wrap_content"
+		android:fontFamily="@font/bebas_regular"
 		android:padding="4dp"
 		android:text="Movie Title"
-		android:textAppearance="@style/TextAppearance.AppCompat.Large"
 		android:textAlignment="center"
-		android:textSize="16sp"
+		android:textAppearance="@style/TextAppearance.AppCompat.Large"
+		android:textSize="18sp"
 		android:textStyle="bold"
-		app:layout_constraintStart_toStartOf="parent"
 		app:layout_constraintEnd_toEndOf="parent"
-		app:layout_constraintTop_toBottomOf="@+id/top_rated_movie_poster"
-		/>
+		app:layout_constraintStart_toStartOf="parent"
+		app:layout_constraintTop_toBottomOf="@+id/top_rated_movie_poster" />
 </androidx.constraintlayout.widget.ConstraintLayout>
