--- a/app/src/main/res/layout/fragment_upcoming_movie.xml
+++ b/app/src/main/res/layout/fragment_upcoming_movie.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
 	xmlns:app="http://schemas.android.com/apk/res-auto"
-	xmlns:tools="http://schemas.android.com/tools"
 	android:layout_width="wrap_content"
 	android:layout_height="match_parent"
 	android:layout_margin="14dp">
@@ -23,14 +22,14 @@
 		android:id="@+id/upcoming_movie_title"
 		android:layout_width="150dp"
 		android:layout_height="wrap_content"
+		android:fontFamily="@font/bebas_regular"
 		android:padding="4dp"
 		android:text="Movie Title"
-		android:textAppearance="@style/TextAppearance.AppCompat.Large"
 		android:textAlignment="center"
-		android:textSize="16sp"
+		android:textAppearance="@style/TextAppearance.AppCompat.Large"
+		android:textSize="18sp"
 		android:textStyle="bold"
-		app:layout_constraintStart_toStartOf="parent"
 		app:layout_constraintEnd_toEndOf="parent"
-		app:layout_constraintTop_toBottomOf="@+id/upcoming_movie_poster"
-		/>
+		app:layout_constraintStart_toStartOf="parent"
+		app:layout_constraintTop_toBottomOf="@+id/upcoming_movie_poster" />
 </androidx.constraintlayout.widget.ConstraintLayout>
